Grant type authorization_code & update swagger.yaml
